--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">Management</string>
     <!--TODO:尽量将一些不要用的词汇进行提出，放到配置文件中，做到易维护-->
     <!--TODO: 检查，删除不要用的配置-->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_bottom_navigation">BottomNavigation</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
-    <string name="title_activity_login">Sign in</string>
+    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
+    <!--<string name="title_activity_bottom_navigation">BottomNavigation</string>-->
+    <!--<string name="title_home">Home</string>-->
+    <!--<string name="title_dashboard">Dashboard</string>-->
+    <!--<string name="title_notifications">Notifications</string>-->
+    <!--<string name="appwidget_text">EXAMPLE</string>-->
+    <!--<string name="add_widget">Add widget</string>-->
+    <!--<string name="title_activity_login">Sign in</string>-->
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -44,7 +44,7 @@
     <!--Alphebet for home page-->
     <string name="material_apply">材料申请</string>
     <string name="material_in_warehouse">材料入库</string>
-    <string name="materail_turn_back">材料归还</string>
+    <string name="material_turn_back">材料归还</string>
     <string name="get_matrial">材料领取</string>
 
     <!--Alphebet for form-list page-->
